# swapcollection

./: .gitignore  README.en.md  README.md  pyproject.toml
spilldict/: __init__.py  spilldict.py
swapcollection/: __init__.py  swapcollection.py
tests/: test_eq_comprehensive.py  test_pickle_exploit.py  test_swapcollection.py
