[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swapcollection"
version = "1.0.0"
description = "A library that automatically offloads large pickle-able objects stored in a dict/list to SQLite, reducing memory usage. It can be used with the same syntax as a regular dict/list."
readme = "README.en.md"
license = "MIT"
authors = [
    {name = "llinghyami"},
]
requires-python = ">=3.10"
dependencies = [
    "sqlite-utils",
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/llinghyami/swapcollection"
Repository = "https://github.com/llinghyami/swapcollection.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["swapcollection*"]
